2006-07-19  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (invalidate_tail):
	made it actually work.

2006-07-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (text_inserted),
	(text_deleted): invalidate tail of buffer after modification
	offset if there are too many invalid segments already, to
	avoid calling fix_offsets_* repeatedly in long sequences
	of modifications.

2006-07-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* stamp-h.in: removed, it's garbage.

2006-07-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: corrected assert in check_segment
	so it works with ENABLE_CHECK_TREE.

2006-07-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (text_inserted and friends):
	handle insertion into simple contexts properly.

2006-07-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: store invalid segments
	in a GTree.

2006-07-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* tests/test-widget.c: added Search and Replace.

2006-07-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: fixed update_syntax()
	return value and invalidating end of batch in case when the batch
	was not enough.
	Made text_inserted() and text_deleted() use hint better, and set/unset it
	as appropriate.
	Made find_insertion_place() use hint.

2006-07-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c:
	* gtksourceview/gtksourcelanguage-private.h:
	* gtksourceview/gtksourcelanguage.[ch]:
	Added "globs" attribute to lang files, added globs
	to GtkSourceLanguage. Removed gtk_source_language_set_mime_types
	for now, added gtk_source_language_get_globs.
	Made "mimetypes" and "globs" attributes optional.
	* gtksourceview/gtksourcelanguagesmanager.[ch]: renamed
	gtk_source_languages_manager_get_language_from_id to
	gtk_source_languages_manager_get_language_by_id;