@@ -23,6 +23,7 @@ which gnome-autogen.sh || {
 REQUIRED_AUTOMAKE_VERSION=1.7.2
 
 USE_GNOME2_MACROS=1 NOCONFIGURE=1 . gnome-autogen.sh
-conf_flags="--enable-maintainer-mode --enable-gtk-doc"
+# conf_flags="--enable-maintainer-mode --enable-gtk-doc"
+conf_flags="--enable-maintainer-mode"
 echo $srcdir/configure $conf_flags "$@"
 $srcdir/configure $conf_flags "$@"
